force-app/main/default/objects/Action_On_Content__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Action On Contents</relationshipLabel>
        <relationshipName>Action_On_Contents_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Adjustment_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Adjustment Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Possibility_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Possibility Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Recommended_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recommended To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommend_Type_1__c</fullName>
        <label>Recommend Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Content_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_Type_2__c</fullName>
        <label>Recommend Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Content_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_Type_3__c</fullName>
        <label>Recommend Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Content_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommendation_Type__c</fullName>
        <label>Recommendation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Content_Name__c</fullName>
        <label>Related Content Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Content_Type__c</fullName>
        <label>Related Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_ID__c</fullName>
        <label>Related Object ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_Type__c</fullName>
        <label>Related Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times_Commented__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Times Commented</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times_Viewed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Times Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actions_On_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Action On Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Identifier__c</columns>
        <columns>NAME</columns>
        <columns>Recommend_Type_1__c</columns>
        <columns>Recommend_Type_2__c</columns>
        <columns>Recommend_Type_3__c</columns>
        <columns>User__c</columns>
        <columns>Times_Viewed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action On Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action On Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>